test/data/pass/expressions/directive.js
"";
"a";

function f() {
   "b";
   "";
   "c";
}

function g() {
   "\r";
}
