test/data/fail/expressions/binary.js
async function a() { await a ** b; } //<>
